# chatServer

./: CMakeLists.txt  README.md  autobuild.sh
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/UDP/: udpSocket.hpp
include/server/db/: db.h  dbPool.hpp
include/server/model/: friendModel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlineMessageModel.hpp  user.hpp  userModel.hpp
include/server/redis/: redis.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/UDP/: udpSocket.cpp
src/server/db/: db.cpp  dbPool.cpp
src/server/model/: friendModel.cpp  frrendModel.cpp  groupmodel.cpp  offlineMessageModel.cpp  userModel.cpp
src/server/redis/: redis.cpp
src/test/: CMakeLists.txt  testIdleConn.cpp
test/: moduoServer.cpp  testJson.cpp
